# local-repl-mcp

./: .gitignore  Modular-Empowerment-README.md  README.md  example_mcp_config.json  justfile  pyproject.toml
ai-cli-skill/: SKILL.md
ai-cli-skill/reference/: ast-grep-patterns.md  gotchas.md  recipes.md
archive/: old_server.py
archive/updated_template/: empowerment_workflow_updated.txt
local_repl/: __init__.py  __main__.py  agent_system_startup.py  agent_utilities.py  doctor.py  evolution_memory.py  repl.py  server.py  shell_bridge.py  streaming.py  venv_exec.py
local_repl/agent_data/: function_tester_1.json  memory_adv.json  project_manager_1.json  researcher_adv.json
local_repl/modular_empowerment_framework/: __init__.py
local_repl/modular_empowerment_framework/src/: __init__.py  setup_environment.py
local_repl/modular_empowerment_framework/src/eo/: __init__.py
local_repl/modular_empowerment_framework/src/integration/: __init__.py  integration.py
local_repl/output/: collosal_acc_research_report.json  collosal_acc_research_summary.md  system_discovery_report.json  system_discovery_summary.md
local_repl/prompts/: __init__.py  advanced_workflow_orchestration.py  agent_demo_simulation.py  basic_python_repl.py  basic_system_check.py  collosal_acc_implementation.py  data_analysis.py  data_analysis_workflow.py  empowered_agent_basic_setup.py  empowerment.py  full_empowerment_workflow.py  python_repl.py  repl_agent_system.py  repl_agent_system_prompt.py  repl_agent_system_prompt.txt  simple_data_analysis.py  strategic_capability_enhancement.py  system_discovery_workflow.py  system_prompt.txt  test_prompt.py
local_repl/repl_agent_library/: data_analysis_agent.py
local_repl/repl_script_library/: create_python_repl.py  delete_repl.py  repl_workflow_template.py  run_python_in_repl.py
modular_empowerment_framework/: README.md
modular_empowerment_framework/examples/: create_python_repl.py  delete_repl.py  repl_integration_example.py  run_python_in_repl.py
modular_empowerment_framework/src/eo/: core.py
modular_empowerment_framework/src/integration/: __init__.py  integration.py
modular_empowerment_framework/src/mdf/: __init__.py  core.py
(+2 files in other folders)
