[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-repl-mcp"
version = "0.1.0"
description = "A local Python REPL MCP server that can be used with Claude Desktop"
authors = [
    {name = "Claude AI Assistant"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.12",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "mcp>=1.9.0",
    "networkx>=3.4.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
    "tensorflow>=2.19.0",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchtext>=0.18.0",
    "torchvision>=0.22.0",
]

[project.scripts]
local-repl-mcp = "local_repl.server:mcp.run"
